--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 
 <head>
-
+  
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
+  <link rel="shortcut icon" href="img/favicon (1).ico">
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>John Doe - Business Administration</title>
+  <title>Oswaldo Gonzalez - Economist</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Oswaldo Gonzalez-Ornelas</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/oswaldogonzalez-ornelas.jpg.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,27 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Oswaldo Gonzalez-Ornelas
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Business Economics📚💸</div>
+        <p class="lead mb-4">My name is Oswaldo Gonzalez-Ornelas, and I am a first-year, college student at the University of California, Riverside. I am also a first generation college student. I completed high school at West Campus, a public school in the city of Sacramento, which is ranked number 32 in California, and 243 nationally. My cumulative GPA in high school was 3.67, and so far, I have exceeded that number in my first quarter of college. I plan to enroll in the honors program as a second-year college student, as I received an invitation from the program due to my first-quarter GPA. I am fluent in both English and Spanish, I know the basics of French, and I am currently learning Japanese. In addition, I hold the seal of biliteracy for Spanish.
+ <br><br>
 
-        Enter bio here<br><br>
+        At age 17, I got my first job as a waiter at an Asian cuisine restaurant, Bento Box, in Sacramento. During my employment there, I learned many great skills such as excellent customer service, sharp time-management skills, a strict work ethic, and budget management. Although it was merely a summer job, I was regarded as one of the most skilled and prompt workers, even by workers who had achieved tenure. Furthermore, during my senior year of high school, I was part of the Youth Tobacco Advisory Committee (YTAC), which conducted research on tobacco products and their marketing strategies within the city of Sacramento, as well as provide counseling to various high schools about the dangers of these products. Working with this research team not only opened my eyes to what research actually is, but strengthened my cooperative skillset. Last but certainly not least, I have been a part of the Men’s Leadership Academy (MLA) program for 3 years, since my Junior year of high school, though I am now considered an alumni of the program. The program advocates for social justice, but more importantly holds an overarching theme of advocating for the youth and leading youth, as youth, to success. While in the program, we were tasked to lead several workshops for the Boys and Men of Color (BMOC) Summit, and as a group made videos regarding social issues, such as the Standing Rock pipeline in North Dakota. One of my highlights of being in the program was our trip to Atlanta, GA in the Spring of 2018, for the annual Student African American Brotherhood (SAAB) conference. During this conference, I learned many things such as the importance of mental health and the power of healing, but the most useful and important thing I learned was the importance (and the how to) of networking. <br><br>
 
-        Enter bio here
+        Building a network, especially in the fields of business and economics, is key to success. I became interested in the field of business because of my acquired skill of networking with ease, but decided to merge that idea with economics. I have been strongly suited in the field of math, so combining two things I flow with easily seemed like a no-brainer. I am equipped with an arsenal of critical thinking and social skills, and I am most definitely ready to apply them in a new workspace. 
         </p>
         <div class="social-icons">
-          <a target="_blank" href="https://linkedin.com">
+          <a target="_blank" href="https://www.linkedin.com/in/oswaldo-gonzalez-ornelas-ab29081a2/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" href="https://github.com">
+          <a target="_blank" href="https://github.com/ogonz046">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" href="https://twitter.com">
+          <a target="_blank" href="https://twitter.com/Oswaldo97374768">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" href="mailto:youremail@gmail.com">
+          <a target="_blank" href="mailto:ogonz046@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,51 +93,49 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://mulesoft.com">Company</a></div>
+            <h3 class="mb-0">Waiter & Cashier</h3>
+            <div class="subheading mb-3"><a target="_blank" href="http://bentoboxmidtown.com/">Bento Box</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Took food orders and brought out food to customers<br> 
+              • Operated the register<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">May 2019 - September 2019</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://pubnub.com">Whole Foods</a></div>
+            <h3 class="mb-0">YTAC Research Team Member</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.scusd.edu/district-program/mens-leadership-academy">YTAC/MLA</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Conducted research on Tobacco marketing strategies<br>
+              • Used the research to advocate against youth use of tobacco products<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">December 2018 - February 2019</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Volunteer</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.cityofsacramento.org/Community-Development/Animal-Care/Adoptions">Front Street Animal Shelter</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Performed manual labor at the shelter<br>
+            • Built utilities for the shelter<br>
+            • Built kuranda beds for the pets<br>
+            • Video-edited to present our work<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">September 2018 - November 2018</span>
           </div>
         </div>
-
 
 
       </div>
@@ -151,35 +150,26 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <h3 class="mb-0">University of California, Riverside</h3>
+            <div class="subheading mb-3">Bachelor's of Business Economics</div>
+            <div>BA in Economics</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">September 2019 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
+            <h3 class="mb-0">West Campus High School</h3>
+            <div class="subheading mb-3">High School Diploma; Seal of Biliteracy: Spanish</div>
             <div>Project Management</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
+            <span class="text-primary">August 2015 - June 2019</span>
           </div>
         </div>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
-          </div>
         </div>
 
       </div>
@@ -191,7 +181,12 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/port1.jpg" width="500px">
+            <img src="img/port5.JPG" width="500px"><br>
+            
+            <img src="img/port2.jpg" width="500px">
+            <img src="img/port3.jpg" width="500px"><br>
+            
         </center>
       </div>
     </section>
@@ -199,7 +194,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Oswaldo Gonzalez-Ornelas</center><br>
 
 
   </div>
